--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -238,6 +238,7 @@
             display: flex;
             align-items: center;
             padding: 20px;
+            width: auto;
         }
 
         .icon {
