--- a/views/admin/account.hbs
+++ b/views/admin/account.hbs
@@ -49,7 +49,7 @@
                                     <th>Email</th>
                                     <th>Role</th>
                                     <th>Phone</th>
-                                    <th>Status</th>
+                                    <th>Is Blocked</th>
                                     <th>Actions</th>
                                 </tr>
                             </thead>
@@ -60,7 +60,7 @@
                                     <td>{{this.email}}</td>
                                     <td>{{this.role}}</td>
                                     <td>{{this.phone}}</td>
-                                    <td>{{this.status}}</td>
+                                    <td>{{this.isActive}}</td>
                                     <td>
                                         <button class="btn btn-danger btn-sm block-btn"
                                             data-id="{{this._id}}">Block</button>
@@ -110,11 +110,11 @@
                     <td>${user.email}</td>
                     <td>${user.role}</td>
                     <td>${user.phone}</td>
-                    <td>${user.status}</td>
+                    <td>${user.isActive}</td>
                     <td>
-                        <button class="block-btn btn btn-danger btn-sm" data-id="${user.id}">Block</button>
-                        <button class="unblock-btn btn btn-success btn-sm" data-id="${user.id}">Unblock</button>
-                        <button class="delete-btn btn btn-danger btn-sm" data-id="${user.id}">Delete</button>
+                        <button class="block-btn btn btn-danger btn-sm" data-id="${user._id}">Block</button>
+                        <button class="unblock-btn btn btn-success btn-sm" data-id="${user._id}">Unblock</button>
+                        <button class="delete-btn btn btn-danger btn-sm" data-id="${user._id}">Delete</button>
                     </td>
                 </tr>
             `;
