--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -25,7 +25,6 @@
                 </ul>
                 <form id="search-form">
                     <div class="search-box">
-                        <!-- Use button to submit the form -->
                         <button type="submit" class="btn-search">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
@@ -36,68 +35,21 @@
                 <div class="hollow-item" style="margin-top: 60px;"></div>
             </div>
 
-
-            <script>
-                // // Get the search field and form
-                // const searchField = document.getElementById('search-field');
-                // const form = document.getElementById('search-form');
-                //
-                // // Event listener for when the user presses "Enter" or clicks the search button
-                // searchField.addEventListener('keypress', function (event) {
-                //     if (event.key === 'Enter') {
-                //         if (searchField.value.trim() !== '') {
-                //             handleSearch();
-                //         }
-                //     }
-                // });
-                //
-                // // Event listener for when the form is submitted (button click or Enter)
-                // form.addEventListener('submit', function (event) {
-                //     event.preventDefault();  // Prevent default form submission
-                //     if (searchField.value.trim() !== '') {
-                //         handleSearch();
-                //     }
-                // });
-                //
-                // function handleSearch() {
-                //     const queryParams = new URLSearchParams();
-                //     queryParams.append('keyword', searchField.value);
-                //
-                //
-                //     // Get the current path to determine the action URL
-                //     const currentPath = window.location.href;
-                //     let url = `/search`;
-                //
-                //     // Adjust URL based on current path (showing, upcoming, etc.)
-                //     if (currentPath.includes('/showing')) {
-                //         url = `/search/showing`;
-                //     } else if (currentPath.includes('/upcoming')) {
-                //         url = `/search/upcoming`;
-                //     }
-                //
-                //     // Append query parameters if they exist
-                //     if (queryParams.toString()) {
-                //         url += `?${queryParams.toString()}`;
-                //     }
-                //
-                //     // Update form action and submit
-                //     form.action = url;
-                //     form.submit();  // Submit the form to the new URL
-                // }
-            </script>
+            {{!-- Authentication buttons --}}
             {{#if isAuthenticated}}
+            {{#if isAdmin}}
+            <a href="/admin/dashboard">
+                <button class="nav-button" type="button">Admin</button>
+            </a>
+            {{/if}}
             <a href="/account/general">
                 <button class="nav-button" type="button">Profile</button>
             </a>
-            {{!-- <a href="/logout">
-                <button class="nav-button" type="submit">Log Out</button>
-            </a> --}}
             {{else}}
             <a href="/login">
                 <button class="nav-button" type="submit">Sign In</button>
             </a>
             {{/if}}
         </div>
-
     </nav>
 </header>
